# video-editor

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: main.rs
